# lazyreq

./: .gitignore  .goreleaser.yaml  Cargo.toml  cargo.toml  example.lreq  main.go
.cargo/: config.toml
.github/workflows/: release.yml
.lazyreq/cache/: 2b41bb435a2ac7b5
src/: cache.rs  config.rs  lazyreq.rs  main.rs  request.rs  timest.rs
