[package]
name = "lazyreq"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10.6"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.3", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
async-recursion = "1.1.1"
colored = "2.0"
home = "0.5"
openssl = { version = "0.10", features = ["vendored"] }